--- a/code/data_analysis/cpu_bounded_func.ipynb
+++ b/code/data_analysis/cpu_bounded_func.ipynb
@@ -9,17 +9,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pickle\n",
-    "data = pickle.load(open('cpu_bounded_func.pickle', 'rb'))"
+    "data = pickle.load(open('cpu_bounded_func_20.pickle', 'rb'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -56,7 +56,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -330,7 +330,7 @@
        "14          2          4                  2      57570.0  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,6 +353,251 @@
    "source": [
     "import plotly.express as px\n",
     "fig = px.bar(tab, x='executor', y='billed_time', color='memory', barmode='group')\n",
+    "fig.update_layout(title_text='cpu_bounded_func')\n",
+    "fig.write_image(\"cpu_bounded_func_billed_time.png\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "one = pickle.load(open('cpu_bounded_func_1.pickle', 'rb'))\n",
+    "twenty = pickle.load(open('cpu_bounded_func_20.pickle', 'rb'))\n",
+    "hundred = pickle.load(open('cpu_bounded_func_100.pickle', 'rb'))\n",
+    "\n",
+    "data_2860 = []"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>lambda</th>\n",
+       "      <th>executor</th>\n",
+       "      <th>final_time</th>\n",
+       "      <th>memory</th>\n",
+       "      <th>cpu_count</th>\n",
+       "      <th>pool_size</th>\n",
+       "      <th>tot_number</th>\n",
+       "      <th>logical_cpu_count</th>\n",
+       "      <th>billed_time</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>0</td>\n",
+       "      <td>py_lambda_concurrency_stress_2816</td>\n",
+       "      <td>processpool</td>\n",
+       "      <td>20.014502</td>\n",
+       "      <td>2816</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20015.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>py_lambda_concurrency_stress_2816</td>\n",
+       "      <td>threadpool</td>\n",
+       "      <td>20.014349</td>\n",
+       "      <td>2816</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20015.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>py_lambda_concurrency_stress_2816</td>\n",
+       "      <td>sequential</td>\n",
+       "      <td>20.014866</td>\n",
+       "      <td>2816</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>20015.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>py_lambda_concurrency_stress_2816</td>\n",
+       "      <td>processpool</td>\n",
+       "      <td>37.311064</td>\n",
+       "      <td>2816</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>37312.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>py_lambda_concurrency_stress_2816</td>\n",
+       "      <td>threadpool</td>\n",
+       "      <td>59.600616</td>\n",
+       "      <td>2816</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>59601.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>py_lambda_concurrency_stress_2816</td>\n",
+       "      <td>sequential</td>\n",
+       "      <td>57.569965</td>\n",
+       "      <td>2816</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>20</td>\n",
+       "      <td>2</td>\n",
+       "      <td>57570.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>py_lambda_concurrency_stress_2816</td>\n",
+       "      <td>processpool</td>\n",
+       "      <td>185.284217</td>\n",
+       "      <td>2816</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>185285.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>py_lambda_concurrency_stress_2816</td>\n",
+       "      <td>threadpool</td>\n",
+       "      <td>299.767922</td>\n",
+       "      <td>2816</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>299768.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>py_lambda_concurrency_stress_2816</td>\n",
+       "      <td>sequential</td>\n",
+       "      <td>288.164885</td>\n",
+       "      <td>2816</td>\n",
+       "      <td>2</td>\n",
+       "      <td>4</td>\n",
+       "      <td>100</td>\n",
+       "      <td>2</td>\n",
+       "      <td>288165.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                              lambda     executor  final_time memory  \\\n",
+       "0  py_lambda_concurrency_stress_2816  processpool   20.014502   2816   \n",
+       "1  py_lambda_concurrency_stress_2816   threadpool   20.014349   2816   \n",
+       "2  py_lambda_concurrency_stress_2816   sequential   20.014866   2816   \n",
+       "3  py_lambda_concurrency_stress_2816  processpool   37.311064   2816   \n",
+       "4  py_lambda_concurrency_stress_2816   threadpool   59.600616   2816   \n",
+       "5  py_lambda_concurrency_stress_2816   sequential   57.569965   2816   \n",
+       "6  py_lambda_concurrency_stress_2816  processpool  185.284217   2816   \n",
+       "7  py_lambda_concurrency_stress_2816   threadpool  299.767922   2816   \n",
+       "8  py_lambda_concurrency_stress_2816   sequential  288.164885   2816   \n",
+       "\n",
+       "   cpu_count  pool_size tot_number  logical_cpu_count  billed_time  \n",
+       "0          2          4          1                  2      20015.0  \n",
+       "1          2          4          1                  2      20015.0  \n",
+       "2          2          4          1                  2      20015.0  \n",
+       "3          2          4         20                  2      37312.0  \n",
+       "4          2          4         20                  2      59601.0  \n",
+       "5          2          4         20                  2      57570.0  \n",
+       "6          2          4        100                  2     185285.0  \n",
+       "7          2          4        100                  2     299768.0  \n",
+       "8          2          4        100                  2     288165.0  "
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tab_2860 = []\n",
+    "\n",
+    "columns = [\n",
+    "    'lambda',\n",
+    "    'executor',\n",
+    "    'final_time',\n",
+    "    'memory',\n",
+    "    'cpu_count',\n",
+    "    'pool_size',\n",
+    "    'tot_number',\n",
+    "    'logical_cpu_count'\n",
+    "]\n",
+    "\n",
+    "for i, sim in enumerate(twenty):\n",
+    "    twenty[i] = eval(sim)\n",
+    "    twenty[i]['lambda'] = lambdas[i]\n",
+    "\n",
+    "for i, sim in enumerate([*one, *twenty, *hundred]):\n",
+    "    if sim['lambda'] == lambdas[4]:\n",
+    "        row = []\n",
+    "        row.append(sim['lambda'])\n",
+    "        row.append(sim['executor'])\n",
+    "        row.append(float(sim['final_time']))\n",
+    "        row.append(int(sim['lambda'].split('_')[4]))\n",
+    "        row.append(int(sim['cpu_count']))\n",
+    "        row.append(int(sim['pool_size']))\n",
+    "        row.append(int(sim['tot_number']))\n",
+    "        row.append(int(sim['logical_cpu_count']))\n",
+    "        tab_2860.append(row)\n",
+    "    \n",
+    "tab_2860 = pd.DataFrame(tab_2860, columns=columns)\n",
+    "\n",
+    "tab_2860['billed_time'] = np.ceil(tab_2860['final_time'] * 1000.0)\n",
+    "tab_2860['executor'] = tab_2860['executor'].astype('category')\n",
+    "tab_2860['memory'] = tab_2860['memory'].astype('category')\n",
+    "tab_2860['tot_number'] = tab_2860['tot_number'].astype('category')\n",
+    "\n",
+    "tab_2860"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 66,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import plotly.express as px\n",
+    "fig = px.bar(tab_2860, x='executor', y='billed_time', color='tot_number', barmode='group')\n",
     "fig.update_layout(title_text='cpu_bounded_func')\n",
     "fig.write_image(\"cpu_bounded_func_billed_time.png\")"
    ]
